# Soprano

./: .gitmodules  CMakeLists.txt  Main.cpp  README.md
GL/: gl3w.c  gl3w.h  glcorearb.h
LibSoprano/: CMakeLists.txt  ChatComponent.cpp  ChatComponent.h  Color.cpp  Color.h  README.md
